--- a/suzytodos/app/src/main/res/values-es-rPE/strings.xml
+++ b/suzytodos/app/src/main/res/values-es-rPE/strings.xml
@@ -7,7 +7,13 @@
     <string name="password">Contraseña</string>
     <string name="email">Correo electrónico</string>
     <string name="name">Bienvenido a Suzy Todos</string>
+    <string name="welcome">Bienvenido</string>
     <string name="addtodo">Añade todo</string>
     <string name="todo">Todo</string>
     <string name="logout">Cerrar sesión</string>
+    <string name="loginhint">Porfavor llene todos los campos del login</string>
+    <string name="signuphint">Porfavor llene todos los campos del registro</string>
+    <string name="signupsuccess">El registro fue exitoso</string>
+    <string name="tododesc">Todo necesita una descripción</string>
+    <string name="tododelete">Todo eliminado</string>
 </resources>
